--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 1 - Arytmetyka komputerowa"
+    "# Zestaw 1. Arytmetyka komputerowa"
    ]
   },
   {
