mownit - lab 5 - done

--- a/lab5/lab5.ipynb
+++ b/lab5/lab5.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "remarkable-pizza",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "equipped-dinner",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "sharing-secretary",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "burning-horror",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "hourly-alexandria",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "velvet-concentrate",
    "metadata": {},
    "outputs": [],
@@ -201,14 +201,12 @@
     "        a, b = map(mpf, interval)\n",
     "        if f(a)*f(b) > 0:\n",
     "            raise ArithmeticException('f(interval[0]) and f(interval[1]) must have opposite signs')\n",
+    "        \n",
     "        range_len = b - a\n",
     "        i = 1\n",
     "        c = mpf((a+b)/2)\n",
     "\n",
     "        while abs(a-c) > error:\n",
-    "            if a == c:\n",
-    "                raise Exception('precision is too low to achieve set error')\n",
-    "\n",
     "            if mpf(f(c)*f(a)) < 0:\n",
     "                b = c\n",
     "            else:\n",
@@ -235,14 +233,14 @@
    "id": "tribal-funds",
    "metadata": {},
    "source": [
-    "Aby metoda bisekcji zadziałała, funkcja musi być określona w każdym punkcie przedziału oraz być na nim ciągła. Dodatkowo, wartości funkcji na krańcach przedziału muszą być przeciwnych znaków. Z twierdzenia o własności Darboux wynika, że funkcja ta posiada conajmniej jeden pierwiastek, metoda bisekcji znajdzie jeden z nich. \n",
+    "Aby metoda bisekcji zadziałała, funkcja musi być określona w każdym punkcie przedziału oraz być na nim ciągła. Dodatkowo, wartości funkcji na krańcach przedziału muszą być przeciwnych znaków. Z twierdzenia o własności Darboux wynika, że funkcja ta posiada conajmniej jeden pierwiastek, metoda bisekcji znajdzie jeden z nich (z dokładnością do błędu).\n",
     "\n",
     "Wszystkie funkcje testowe spełniają powyższe warunki po ustaleniu odpowiednich przedziałów."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "early-survey",
    "metadata": {},
    "outputs": [
@@ -275,7 +273,7 @@
     }
    ],
    "source": [
-    "for f, interval, name in [(f1, f1_d, 'f1'), (f2, f2_d, 'f2'), (f3, f3_d, 'f3')]:\n",
+    "for f, interval, name in ((f1, f1_d, 'f1'), (f2, f2_d, 'f2'), (f3, f3_d, 'f3')):\n",
     "    for e in [7, 15, 33]:\n",
     "        bisection(f, e+2, interval, f'1e-{e}', name)\n",
     "    print()"
@@ -299,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "historical-motion",
    "metadata": {},
    "outputs": [],
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "breeding-generic",
    "metadata": {},
    "outputs": [],
@@ -350,12 +348,12 @@
    "id": "individual-organ",
    "metadata": {},
    "source": [
-    "Poniższe wykresy prezentują kolejne punkty metody bisekcji dla dokładności $10^{-7}$ i kolejnych testowanych funkcji. Prezentowanie kolejnych iteracji na wykresie z normalną liniową skalą osi jest jednak problematyczne z uwagi na to, że odległości między punktami każdorazowo maleje dwukrotnie."
+    "Poniższe wykresy prezentują kolejne punkty metody bisekcji dla dokładności $10^{-7}$ i kolejnych testowanych funkcji. Prezentowanie kolejnych iteracji na wykresie z normalną liniową skalą osi jest jednak problematyczne z uwagi na to, że odległość między punktami każdorazowo maleje dwukrotnie."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "valid-distinction",
    "metadata": {},
    "outputs": [
@@ -373,12 +371,12 @@
     }
    ],
    "source": [
-    "plot_bisection(f1, 8, f1_d, '1e-7', \"f1(x)\")"
+    "plot_bisection(f1, 9, f1_d, '1e-7', \"f1(x)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "ultimate-balloon",
    "metadata": {},
    "outputs": [
@@ -396,12 +394,12 @@
     }
    ],
    "source": [
-    "plot_bisection(f2, 8, f2_d, '1e-7', \"f2(x)\")"
+    "plot_bisection(f2, 9, f2_d, '1e-7', \"f2(x)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "important-underground",
    "metadata": {},
    "outputs": [
@@ -419,7 +417,7 @@
     }
    ],
    "source": [
-    "plot_bisection(f3, 8, f3_d, '1e-7', \"f3(x)\")"
+    "plot_bisection(f3, 9, f3_d, '1e-7', \"f3(x)\")"
    ]
   },
   {
@@ -440,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "hydraulic-hospital",
    "metadata": {},
    "outputs": [],
@@ -451,6 +449,7 @@
     "        \n",
     "    epsilons = np.linspace(1e-15, 1e-7, 200)\n",
     "    needed_iterations = lambda epsilon: bisection(f, 36, f_d, epsilon)[2]\n",
+    "    \n",
     "    ax.set_title(title, fontsize=15)\n",
     "    ax.plot(epsilons, list(map(needed_iterations, epsilons)), \n",
     "            color=(203/255, 223/255, 189/255), linewidth=5)\n",
@@ -460,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "permanent-column",
    "metadata": {},
    "outputs": [
@@ -502,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "eastern-boating",
    "metadata": {},
    "outputs": [],
@@ -514,6 +513,7 @@
     "    epsilons = np.linspace(1e-15, 1e-7, 200)\n",
     "    a, b = interval\n",
     "    func = lambda epsilon: ceil(log((b-a)/epsilon)/log(2))\n",
+    "    \n",
     "    ax[1].plot(epsilons, list(map(func, epsilons)), \n",
     "            color=(241/255, 156/255, 121/255), linewidth=5)\n",
     "    ax[1].set_title('n(epsilon)')\n",
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "continent-chance",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "qualified-management",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "fitting-privacy",
    "metadata": {},
    "outputs": [
@@ -599,7 +599,7 @@
    "source": [
     "Badane wykresy są sobie tożsame, co prowadzi do wniosku, że liczba iteracji potrzebnych do znalezienia rozwiązania równania przy zadanej dokładności jest opisana funkcją o wskazanym wzorze. Dla ustalonej długości przedziału startowego, w którym szukamy pierwiastka, jest to funkcja jedynie zmiennej epsilon i nie zależy od funkcji.\n",
     "\n",
-    "Tłumaczy to fakt, że wykresy nie różnią się bardzo dla różnych testowanych funkcji, jedyne co wpływa na to, że wykresy nie są identyczne, to różna długość przedziału startowego, który jednak nie wpływa na ogólny charakter odwzorowania.\n",
+    "Tłumaczy to, dlaczego wykresy nie różnią się bardzo dla różnych testowanych funkcji; jedyne co wpływa na to, że wykresy nie są identyczne, to różna długość przedziału startowego, który jednak nie wpływa na ogólny charakter odwzorowania.\n",
     "\n",
     "Przytoczony wzór (o równoważnej formie: $n = \\lceil\\log_{2}\\frac{b-a}{\\epsilon}\\rceil$) bierze się z faktu, że przy każdej iteracji zmniejszamy długość przedziału 2 razy."
    ]
@@ -625,14 +625,14 @@
    "id": "eligible-bikini",
    "metadata": {},
    "source": [
-    "W metodzie Newtona możemy rozpoczynać iterację od różnych wartość początkowych. Znając przedział, możemy na podstawie wykresu wskazać punkt, który leży blisko pierwiastka i zdaje się nie powodować problemów dla tej metody. Możemy także najpierw użyć metody bisekcji, a następnie poprawić wynik metodą Newtona rozpoczynając w w otrzymanym punkcie.\n",
+    "W metodzie Newtona możemy rozpoczynać iterację od różnych wartość początkowych. Znając przedział, możemy na podstawie wykresu wskazać punkt, który leży blisko pierwiastka i zdaje się nie powodować problemów dla tej metody. Możemy także najpierw użyć metody bisekcji, a następnie poprawić wynik metodą Newtona rozpoczynając w otrzymanym punkcie.\n",
     "\n",
     "Dla poniższych testów przyjąłem punkt startowy w środku dziedziny."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "id": "healthy-scope",
    "metadata": {},
    "outputs": [],
@@ -652,6 +652,7 @@
     "            \n",
     "            x, prev = x - mpf(f(x)/f_prim(x)), x\n",
     "            i += 1\n",
+    "            \n",
     "            if abs(x - prev) < epsilon:\n",
     "                if name:\n",
     "                    print(f'{name}({x}) \\n= {f(x)}, \\niterations: {i}')\n",
@@ -677,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "id": "scenic-clause",
    "metadata": {},
    "outputs": [],
@@ -689,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "id": "crucial-receiver",
    "metadata": {},
    "outputs": [
@@ -731,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 22,
    "id": "danish-psychiatry",
    "metadata": {},
    "outputs": [
@@ -805,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 23,
    "id": "greek-bryan",
    "metadata": {},
    "outputs": [],
@@ -838,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "id": "modern-network",
    "metadata": {},
    "outputs": [
@@ -861,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 25,
    "id": "dedicated-rabbit",
    "metadata": {},
    "outputs": [
@@ -884,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 26,
    "id": "widespread-niagara",
    "metadata": {},
    "outputs": [
@@ -923,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 27,
    "id": "prepared-bibliography",
    "metadata": {},
    "outputs": [],
@@ -951,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 28,
    "id": "faced-static",
    "metadata": {},
    "outputs": [
@@ -980,7 +981,7 @@
    "id": "fifth-authority",
    "metadata": {},
    "source": [
-    "Zgodnie z oczekiwaniami, liczba potrzebnych iteracji jest nierosnącą funkcją błędu bezwględnego. W przeciwieństwie od metody bisekcji, zależy w znacznym stopniu od testowanej funkcji i doboru początkowej wartości. Potrzebna liczba iteracji dla badanych funkcji zmienia się bardzo wolno i nie zaobserwowałem przyjmowanie wszystkich pośrednich wartości. W porównaniu do wykresów z metody bisekcji, ta zależność jest bardziej nieprzewidywalna, choć zbiór wartości cechuje mała moc."
+    "Zgodnie z oczekiwaniami, liczba potrzebnych iteracji jest nierosnącą funkcją błędu bezwględnego. W przeciwieństwie do metody bisekcji, zależy ona w znacznym stopniu od testowanej funkcji i doboru początkowej wartości. Potrzebna liczba iteracji dla badanych funkcji zmienia się bardzo wolno oraz jest stała na przedziałach o różnych długościach. W porównaniu do wykresów z metody bisekcji, ta zależność jest bardziej nieprzewidywalna, choć zbiór wartości cechuje mała moc."
    ]
   },
   {
@@ -989,8 +990,8 @@
    "metadata": {},
    "source": [
     "## Wnioski\n",
-    "- Metoda bisekcji skutecznie znajduje rozwiązania równań z zadaną dokładnością. W porównaniu do innych metod zbiega wolno, jednak liczba potrzebnych iteracji nigdy nie przekracza rzędu 10^2 dla typowych wartości błędu.\n",
-    "- Metoda Newtona zbiega dużo szybciej od metody bisekcji, jednak nie gwarantuje znalezienia pierwiastków dla każdej klasy równań i powinniśmy najpierw przeanalizować przebieg funkcji i dostosować odpowiednio jej działanie."
+    "- Metoda bisekcji skutecznie znajduje rozwiązania równań z zadaną dokładnością. W porównaniu do innych metod zbiega wolniej, jednak liczba potrzebnych iteracji nigdy nie przekracza rzędu 10^2 dla typowych wartości błędu.\n",
+    "- Metoda Newtona-Raphsona zbiega dużo szybciej od metody bisekcji, jednak nie gwarantuje znalezienia pierwiastków dla każdej klasy równań i powinniśmy najpierw przeanalizować przebieg funkcji i dostosować odpowiednio jej działanie."
    ]
   },
   {
